@@ -127,4 +127,6 @@
       permission="zope2.View"
       />
 
+  <adapter factory=".video.ManagementPlanCodeEdit" />
+
 </configure>
