@@ -6,6 +6,7 @@ Changelog
  * Bug fix: Added translation domain to ZCML files [voineali #4139]
  * Cleanup: of pyflakes compiler warnings [ichimdav #4141]
  * Cleanup: of pylint violations [ichimdav #4140]
+ * Feature: added management plan code for videos [tiberich #4215]
 
 0.3 - (2011-03-01)
 ------------------
